--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
@@ -23,6 +24,7 @@
     "framer-motion": "^10.16.1",
     "jwt-decode": "^3.1.2",
     "next": "13.4.19",
+    "next-redux-wrapper": "^8.1.0",
     "next-seo": "^6.1.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
